force-app/main/default/objects/Approval_Request__e/Approval_Request__e.object-meta.xml
<CustomObject>
    <label>Approval Request</label>
    <pluralLabel>Approval Requests</pluralLabel>
    <description>Outbound approval request to the corporate (on-prem) approval system. The on-prem middleware subscribes via the Pub/Sub API — connection is initiated from inside the corporate network, so no inbound firewall opening is needed. Payload is deliberately PII-light: names and titles only, no email or phone.</description>
</CustomObject>