force-app/main/default/objects/Approval_Request__e/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>