force-app/main/default/objects/Approval_Request__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Text</type>
    <length>10</length>
    <required>true</required>
    <description>REQUEST for a first submission, RESEND when the reconciliation batch re-drives a request the middleware never acknowledged. A RESEND carries the same Correlation ID — the middleware must treat it as an upsert, not a new ticket.</description>
</CustomField>