force-app/main/default/objects/Approval_Request__e/fields/Approver_Federation_Id__c.field-meta.xml
<CustomField>
    <fullName>Approver_Federation_Id__c</fullName>
    <label>Approver Federation ID</label>
    <type>Text</type>
    <length>255</length>
    <description>The approver identity the corporate system understands: User.FederationIdentifier (employee ID / directory account), falling back to Username when federation is not populated.</description>
</CustomField>