force-app/main/default/objects/Approval_Request__e/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <label>Approver Name</label>
    <type>Text</type>
    <length>121</length>
</CustomField>