force-app/main/default/objects/Approval_Request__e/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name</label>
    <type>Text</type>
    <length>121</length>
</CustomField>