force-app/main/default/objects/Approval_Request__e/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <label>Contact Title</label>
    <type>Text</type>
    <length>128</length>
</CustomField>