force-app/main/default/objects/Approval_Request__e/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation ID</label>
    <type>Text</type>
    <length>36</length>
    <required>true</required>
    <description>Matches Event_Invitee__c.External_Approval_Id__c; the decision callback must echo it back.</description>
</CustomField>