force-app/main/default/objects/Approval_Request__e/fields/Invitee_Id__c.field-meta.xml
<CustomField>
    <fullName>Invitee_Id__c</fullName>
    <label>Invitee Record ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>