force-app/main/default/objects/Approval_Request__e/fields/Submitted_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Name__c</fullName>
    <label>Submitted By Name</label>
    <type>Text</type>
    <length>121</length>
</CustomField>